feat: city card slider
Top cities cards displayed for the selected number of cards

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <img src="../assets/htmlcss/General Images & Icons/background.svg" class="bg-image" alt="background image">
+    <img src="../assets/htmlcss/General Images & Icons/background.svg" class="bg-image-1 bg-image" alt="background image">
     <header class="row city-weather-header">
         
         <div class="col-3 col-s-6 header-item header-item-1">
@@ -113,7 +113,66 @@
             </div>
         </div>
         <div class="slider-container">
-            
+            <div class="left-arrow-div">
+                <img class="left-arrow" src="../assets/htmlcss/General Images & Icons/arrowUp.svg" alt="">
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-title">
+                        <h3>Perth</h3>
+                        <h3><img class="card-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</h3>
+                    </div>
+                    <div class="card-content">
+                        <h5>10:00 AM</h5>
+                        <h5>21-July-2021</h5>
+                        <p><img class="card-icon" src="../assets/htmlcss/Weather Icons/humidityIcon.svg" alt=""> 53%</p>
+                        <p><img class="card-icon" src="../assets/htmlcss/Weather Icons/precipitationIcon.svg" alt=""> 10%</p>
+                    </div>
+                    <div class="card-city-icon-div"><img class="card-city-icon" src="../assets/htmlcss/Icons for cities/perth.svg" alt=""></div>
+                </div>
+                <div class="card">
+                    <div class="card-title">
+                        <h3>Perth</h3>
+                        <h3><img class="card-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</h3>
+                    </div>
+                    <div class="card-content">
+                        <h5>10:00 AM</h5>
+                        <h5>21-July-2021</h5>
+                        <p><img class="card-icon" src="../assets/htmlcss/Weather Icons/humidityIcon.svg" alt=""> 53%</p>
+                        <p><img class="card-icon" src="../assets/htmlcss/Weather Icons/precipitationIcon.svg" alt=""> 10%</p>
+                    </div>
+                    <div class="card-city-icon-div"><img class="card-city-icon" src="../assets/htmlcss/Icons for cities/perth.svg" alt=""></div>
+                </div>
+                <div class="card">
+                    <div class="card-title">
+                        <h3>Perth</h3>
+                        <h3><img class="card-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</h3>
+                    </div>
+                    <div class="card-content">
+                        <h5>10:00 AM</h5>
+                        <h5>21-July-2021</h5>
+                        <p><img class="card-icon" src="../assets/htmlcss/Weather Icons/humidityIcon.svg" alt=""> 53%</p>
+                        <p><img class="card-icon" src="../assets/htmlcss/Weather Icons/precipitationIcon.svg" alt=""> 10%</p>
+                    </div>
+                    <div class="card-city-icon-div"><img class="card-city-icon" src="../assets/htmlcss/Icons for cities/perth.svg" alt=""></div>
+                </div>
+                <div class="card">
+                    <div class="card-title">
+                        <h3>Perth</h3>
+                        <h3><img class="card-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</h3>
+                    </div>
+                    <div class="card-content">
+                        <h5>10:00 AM</h5>
+                        <h5>21-July-2021</h5>
+                        <p><img class="card-icon" src="../assets/htmlcss/Weather Icons/humidityIcon.svg" alt=""> 53%</p>
+                        <p><img class="card-icon" src="../assets/htmlcss/Weather Icons/precipitationIcon.svg" alt=""> 10%</p>
+                    </div>
+                    <div class="card-city-icon-div"><img class="card-city-icon" src="../assets/htmlcss/Icons for cities/perth.svg" alt=""></div>
+                </div>
+            </div>
+            <div class="right-arrow-div">
+                <img class="right-arrow" src="../assets/htmlcss/General Images & Icons/arrowUp.svg" alt="">
+            </div>
         </div>
     </section>
 </body>
