feat: continent wise weather
The list of cities with their weather and current time based on continent is presented in a grid which is sortable by name and tempearture.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,6 @@
 <body>
     <img src="../assets/htmlcss/General Images & Icons/background.svg" class="bg-image-1 bg-image" alt="background image">
     <header class="row city-weather-header">
-        
         <div class="col-3 col-s-6 header-item header-item-1">
             <div class="city-select-div">
                 <img src="../assets/htmlcss/Icons for cities/perth.svg" class="city-icon" alt="Perth Icon">
@@ -28,7 +27,7 @@
         <div class="col-3 col-s-6 header-item header-item-2">
             <div class="temperature values-div">
                 <h5>Temp &deg;C</h5>
-                <p>35 C</p>
+                <p>35 &deg;C</p>
             </div>
             <div class="humidity values-div">
                 <h5>Humidity</h5>
@@ -36,11 +35,11 @@
             </div>
             <div class="temperature values-div">
                 <h5>Temp &deg;F</h5>
-                <p>78 F</p>
+                <p>78 &deg;F</p>
             </div>
             <div class="precipitation values-div">
                 <h5>Precipitation</h5>
-                <p>0</p>
+                <p>0%</p>
             </div>
         </div>
         <div class="col-6 col-s-12 header-item header-item-3">
@@ -116,8 +115,8 @@
             <div class="left-arrow-div">
                 <img class="left-arrow" src="../assets/htmlcss/General Images & Icons/arrowUp.svg" alt="">
             </div>
-            <div class="card-container">
-                <div class="card">
+            <ul class="card-container">
+                <li class="card">
                     <div class="card-title">
                         <h3>Perth</h3>
                         <h3><img class="card-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</h3>
@@ -129,8 +128,8 @@
                         <p><img class="card-icon" src="../assets/htmlcss/Weather Icons/precipitationIcon.svg" alt=""> 10%</p>
                     </div>
                     <div class="card-city-icon-div"><img class="card-city-icon" src="../assets/htmlcss/Icons for cities/perth.svg" alt=""></div>
-                </div>
-                <div class="card">
+                </li>
+                <li class="card">
                     <div class="card-title">
                         <h3>Perth</h3>
                         <h3><img class="card-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</h3>
@@ -142,8 +141,8 @@
                         <p><img class="card-icon" src="../assets/htmlcss/Weather Icons/precipitationIcon.svg" alt=""> 10%</p>
                     </div>
                     <div class="card-city-icon-div"><img class="card-city-icon" src="../assets/htmlcss/Icons for cities/perth.svg" alt=""></div>
-                </div>
-                <div class="card">
+                </li>
+                <li class="card">
                     <div class="card-title">
                         <h3>Perth</h3>
                         <h3><img class="card-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</h3>
@@ -155,8 +154,8 @@
                         <p><img class="card-icon" src="../assets/htmlcss/Weather Icons/precipitationIcon.svg" alt=""> 10%</p>
                     </div>
                     <div class="card-city-icon-div"><img class="card-city-icon" src="../assets/htmlcss/Icons for cities/perth.svg" alt=""></div>
-                </div>
-                <div class="card">
+                </li>
+                <li class="card">
                     <div class="card-title">
                         <h3>Perth</h3>
                         <h3><img class="card-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</h3>
@@ -168,12 +167,143 @@
                         <p><img class="card-icon" src="../assets/htmlcss/Weather Icons/precipitationIcon.svg" alt=""> 10%</p>
                     </div>
                     <div class="card-city-icon-div"><img class="card-city-icon" src="../assets/htmlcss/Icons for cities/perth.svg" alt=""></div>
-                </div>
-            </div>
+                </li>
+            </ul>
             <div class="right-arrow-div">
                 <img class="right-arrow" src="../assets/htmlcss/General Images & Icons/arrowUp.svg" alt="">
             </div>
         </div>
+    </section>
+    <section class="cont-list">
+        <div class="cont-header">
+            <div class="cont-title">Cities across continents at a Glance</div>
+            <div class="sort-controls">
+                <div class="cont-sort">Continent&nbsp;Name&nbsp;<img class="cont-sort-icon" src="../assets/htmlcss/General Images & Icons/downArrow.svg" alt=""></div>
+                <div class="temp-sort">Temperature&nbsp;<img class="cont-sort-icon" src="../assets/htmlcss/General Images & Icons/upArrow.svg" alt=""></div>
+            </div>
+        </div>
+        <ul class="cont-grid">
+            <li class="cont-item">
+                <div class="cont-item-title">
+                    <div class="cont-name">Asia</div>
+                    <div class="cont-temp"><img class="cont-temp-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</div>
+                </div>
+                <div class="cont-content">
+                    <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
+                    <div class="cont-humidity"><img src="../assets/htmlcss/Weather Icons/humidityIcon.svg" alt="" class="cont-humidity-icon"> 53%</div>
+                </div>
+            </li>
+            <li class="cont-item">
+                <div class="cont-item-title">
+                    <div class="cont-name">Asia</div>
+                    <div class="cont-temp"><img class="cont-temp-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</div>
+                </div>
+                <div class="cont-content">
+                    <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
+                    <div class="cont-humidity"><img src="../assets/htmlcss/Weather Icons/humidityIcon.svg" alt="" class="cont-humidity-icon"> 53%</div>
+                </div>
+            </li>
+            <li class="cont-item">
+                <div class="cont-item-title">
+                    <div class="cont-name">Asia</div>
+                    <div class="cont-temp"><img class="cont-temp-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</div>
+                </div>
+                <div class="cont-content">
+                    <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
+                    <div class="cont-humidity"><img src="../assets/htmlcss/Weather Icons/humidityIcon.svg" alt="" class="cont-humidity-icon"> 53%</div>
+                </div>
+            </li>
+            <li class="cont-item">
+                <div class="cont-item-title">
+                    <div class="cont-name">Asia</div>
+                    <div class="cont-temp"><img class="cont-temp-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</div>
+                </div>
+                <div class="cont-content">
+                    <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
+                    <div class="cont-humidity"><img src="../assets/htmlcss/Weather Icons/humidityIcon.svg" alt="" class="cont-humidity-icon"> 53%</div>
+                </div>
+            </li>
+            <li class="cont-item">
+                <div class="cont-item-title">
+                    <div class="cont-name">Asia</div>
+                    <div class="cont-temp"><img class="cont-temp-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</div>
+                </div>
+                <div class="cont-content">
+                    <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
+                    <div class="cont-humidity"><img src="../assets/htmlcss/Weather Icons/humidityIcon.svg" alt="" class="cont-humidity-icon"> 53%</div>
+                </div>
+            </li>
+            <li class="cont-item">
+                <div class="cont-item-title">
+                    <div class="cont-name">Asia</div>
+                    <div class="cont-temp"><img class="cont-temp-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</div>
+                </div>
+                <div class="cont-content">
+                    <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
+                    <div class="cont-humidity"><img src="../assets/htmlcss/Weather Icons/humidityIcon.svg" alt="" class="cont-humidity-icon"> 53%</div>
+                </div>
+            </li>
+            <li class="cont-item">
+                <div class="cont-item-title">
+                    <div class="cont-name">Asia</div>
+                    <div class="cont-temp"><img class="cont-temp-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</div>
+                </div>
+                <div class="cont-content">
+                    <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
+                    <div class="cont-humidity"><img src="../assets/htmlcss/Weather Icons/humidityIcon.svg" alt="" class="cont-humidity-icon"> 53%</div>
+                </div>
+            </li>
+            <li class="cont-item">
+                <div class="cont-item-title">
+                    <div class="cont-name">Asia</div>
+                    <div class="cont-temp"><img class="cont-temp-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</div>
+                </div>
+                <div class="cont-content">
+                    <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
+                    <div class="cont-humidity"><img src="../assets/htmlcss/Weather Icons/humidityIcon.svg" alt="" class="cont-humidity-icon"> 53%</div>
+                </div>
+            </li>
+            <li class="cont-item">
+                <div class="cont-item-title">
+                    <div class="cont-name">Asia</div>
+                    <div class="cont-temp"><img class="cont-temp-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</div>
+                </div>
+                <div class="cont-content">
+                    <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
+                    <div class="cont-humidity"><img src="../assets/htmlcss/Weather Icons/humidityIcon.svg" alt="" class="cont-humidity-icon"> 53%</div>
+                </div>
+            </li>
+            <li class="cont-item">
+                <div class="cont-item-title">
+                    <div class="cont-name">Asia</div>
+                    <div class="cont-temp"><img class="cont-temp-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</div>
+                </div>
+                <div class="cont-content">
+                    <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
+                    <div class="cont-humidity"><img src="../assets/htmlcss/Weather Icons/humidityIcon.svg" alt="" class="cont-humidity-icon"> 53%</div>
+                </div>
+            </li>
+            <li class="cont-item">
+                <div class="cont-item-title">
+                    <div class="cont-name">Asia</div>
+                    <div class="cont-temp"><img class="cont-temp-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</div>
+                </div>
+                <div class="cont-content">
+                    <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
+                    <div class="cont-humidity"><img src="../assets/htmlcss/Weather Icons/humidityIcon.svg" alt="" class="cont-humidity-icon"> 53%</div>
+                </div>
+            </li>
+            <li class="cont-item">
+                <div class="cont-item-title">
+                    <div class="cont-name">Asia</div>
+                    <div class="cont-temp"><img class="cont-temp-icon" src="../assets/htmlcss/Weather Icons/sunnyIcon.svg" alt=""> 25&nbsp;&deg;C</div>
+                </div>
+                <div class="cont-content">
+                    <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
+                    <div class="cont-humidity"><img src="../assets/htmlcss/Weather Icons/humidityIcon.svg" alt="" class="cont-humidity-icon"> 53%</div>
+                </div>
+            </li>
+        </ul>
     </section>
 </body>
 </html>
