--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./src/styles.css" />
     <link
       rel="icon"
       type="image/svg+xml"
-      href="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+      href="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
     />
   </head>
   <body>
     <img
-      src="../assets/htmlcss/General Images & Icons/background.svg"
+      src="./assets/htmlcss/General Images & Icons/background.svg"
       class="bg-image-1 bg-image"
       alt="background image"
     />
@@ -22,7 +22,7 @@
       <div class="col-3 col-s-6 header-item header-item-1">
         <div class="city-select-div">
           <img
-            src="../assets/htmlcss/Icons for cities/perth.svg"
+            src="./assets/htmlcss/Icons for cities/perth.svg"
             class="city-icon"
             alt="Perth Icon"
           />
@@ -37,7 +37,7 @@
             10:44:<small>55</small>
             <img
               class="am-state-icon"
-              src="../assets/htmlcss/General Images & Icons/amState.svg"
+              src="./assets/htmlcss/General Images & Icons/amState.svg"
               alt="AM"
             />
           </p>
@@ -68,7 +68,7 @@
           <p class="timeline-bar">|</p>
           <img
             class="timeline-icon"
-            src="../assets/htmlcss/Weather Icons/cloudyIcon.svg"
+            src="./assets/htmlcss/Weather Icons/cloudyIcon.svg"
             alt=""
           />
           <p class="timeline-number">6</p>
@@ -78,7 +78,7 @@
           <p class="timeline-bar">|</p>
           <img
             class="timeline-icon"
-            src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+            src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
             alt=""
           />
           <p class="timeline-number">7</p>
@@ -88,7 +88,7 @@
           <p class="timeline-bar">|</p>
           <img
             class="timeline-icon"
-            src="../assets/htmlcss/Weather Icons/rainyIcon.svg"
+            src="./assets/htmlcss/Weather Icons/rainyIcon.svg"
             alt=""
           />
           <p class="timeline-number">7</p>
@@ -98,7 +98,7 @@
           <p class="timeline-bar">|</p>
           <img
             class="timeline-icon"
-            src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+            src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
             alt=""
           />
           <p class="timeline-number">8</p>
@@ -108,7 +108,7 @@
           <p class="timeline-bar">|</p>
           <img
             class="timeline-icon"
-            src="../assets/htmlcss/Weather Icons/windyIcon.svg"
+            src="./assets/htmlcss/Weather Icons/windyIcon.svg"
             alt=""
           />
           <p class="timeline-number">6</p>
@@ -118,7 +118,7 @@
           <p class="timeline-bar">|</p>
           <img
             class="timeline-icon"
-            src="../assets/htmlcss/Weather Icons/cloudyIcon.svg"
+            src="./assets/htmlcss/Weather Icons/cloudyIcon.svg"
             alt=""
           />
           <p class="timeline-number">6</p>
@@ -132,21 +132,21 @@
           <div class="nav-item selected">
             <img
               class="nav-icon"
-              src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+              src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
               alt=""
             />
           </div>
           <div class="nav-item">
             <img
               class="nav-icon"
-              src="../assets/htmlcss/Weather Icons/snowflakeIcon.svg"
+              src="./assets/htmlcss/Weather Icons/snowflakeIcon.svg"
               alt=""
             />
           </div>
           <div class="nav-item">
             <img
               class="nav-icon"
-              src="../assets/htmlcss/Weather Icons/rainyIcon.svg"
+              src="./assets/htmlcss/Weather Icons/rainyIcon.svg"
               alt=""
             />
           </div>
@@ -169,7 +169,7 @@
         <div class="left-arrow-div">
           <img
             class="left-arrow"
-            src="../assets/htmlcss/General Images & Icons/arrowUp.svg"
+            src="./assets/htmlcss/General Images & Icons/arrowUp.svg"
             alt=""
           />
         </div>
@@ -180,7 +180,7 @@
               <h3>
                 <img
                   class="card-icon"
-                  src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+                  src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
                   alt=""
                 />
                 25&nbsp;&deg;C
@@ -192,7 +192,7 @@
               <p>
                 <img
                   class="card-icon"
-                  src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+                  src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
                   alt=""
                 />
                 53%
@@ -200,7 +200,7 @@
               <p>
                 <img
                   class="card-icon"
-                  src="../assets/htmlcss/Weather Icons/precipitationIcon.svg"
+                  src="./assets/htmlcss/Weather Icons/precipitationIcon.svg"
                   alt=""
                 />
                 10%
@@ -209,7 +209,7 @@
             <div class="card-city-icon-div">
               <!-- <img
                 class="card-city-icon"
-                src="../assets/htmlcss/Icons for cities/perth.svg"
+                src="./assets/htmlcss/Icons for cities/perth.svg"
                 alt=""
               /> -->
             </div>
@@ -220,7 +220,7 @@
               <h3>
                 <img
                   class="card-icon"
-                  src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+                  src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
                   alt=""
                 />
                 25&nbsp;&deg;C
@@ -232,7 +232,7 @@
               <p>
                 <img
                   class="card-icon"
-                  src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+                  src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
                   alt=""
                 />
                 53%
@@ -240,7 +240,7 @@
               <p>
                 <img
                   class="card-icon"
-                  src="../assets/htmlcss/Weather Icons/precipitationIcon.svg"
+                  src="./assets/htmlcss/Weather Icons/precipitationIcon.svg"
                   alt=""
                 />
                 10%
@@ -249,7 +249,7 @@
             <div class="card-city-icon-div">
               <!-- <img
                 class="card-city-icon"
-                src="../assets/htmlcss/Icons for cities/perth.svg"
+                src="./assets/htmlcss/Icons for cities/perth.svg"
                 alt=""
               /> -->
             </div>
@@ -260,7 +260,7 @@
               <h3>
                 <img
                   class="card-icon"
-                  src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+                  src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
                   alt=""
                 />
                 25&nbsp;&deg;C
@@ -272,7 +272,7 @@
               <p>
                 <img
                   class="card-icon"
-                  src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+                  src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
                   alt=""
                 />
                 53%
@@ -280,7 +280,7 @@
               <p>
                 <img
                   class="card-icon"
-                  src="../assets/htmlcss/Weather Icons/precipitationIcon.svg"
+                  src="./assets/htmlcss/Weather Icons/precipitationIcon.svg"
                   alt=""
                 />
                 10%
@@ -289,7 +289,7 @@
             <div class="card-city-icon-div">
               <!-- <img
                 class="card-city-icon"
-                src="../assets/htmlcss/Icons for cities/perth.svg"
+                src="./assets/htmlcss/Icons for cities/perth.svg"
                 alt=""
               /> -->
             </div>
@@ -300,7 +300,7 @@
               <h3>
                 <img
                   class="card-icon"
-                  src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+                  src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
                   alt=""
                 />
                 25&nbsp;&deg;C
@@ -312,7 +312,7 @@
               <p>
                 <img
                   class="card-icon"
-                  src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+                  src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
                   alt=""
                 />
                 53%
@@ -320,7 +320,7 @@
               <p>
                 <img
                   class="card-icon"
-                  src="../assets/htmlcss/Weather Icons/precipitationIcon.svg"
+                  src="./assets/htmlcss/Weather Icons/precipitationIcon.svg"
                   alt=""
                 />
                 10%
@@ -329,7 +329,7 @@
             <div class="card-city-icon-div">
               <!-- <img
                 class="card-city-icon"
-                src="../assets/htmlcss/Icons for cities/perth.svg"
+                src="./assets/htmlcss/Icons for cities/perth.svg"
                 alt=""
               /> -->
             </div>
@@ -338,7 +338,7 @@
         <div class="right-arrow-div">
           <img
             class="right-arrow"
-            src="../assets/htmlcss/General Images & Icons/arrowUp.svg"
+            src="./assets/htmlcss/General Images & Icons/arrowUp.svg"
             alt=""
           />
         </div>
@@ -351,14 +351,14 @@
           <div class="cont-sort">
             Continent&nbsp;Name&nbsp;<img
               class="cont-sort-icon"
-              src="../assets/htmlcss/General Images & Icons/downArrow.svg"
+              src="./assets/htmlcss/General Images & Icons/downArrow.svg"
               alt=""
             />
           </div>
           <div class="temp-sort">
             Temperature&nbsp;<img
               class="cont-sort-icon"
-              src="../assets/htmlcss/General Images & Icons/upArrow.svg"
+              src="./assets/htmlcss/General Images & Icons/upArrow.svg"
               alt=""
             />
           </div>
@@ -371,7 +371,7 @@
             <div class="cont-temp">
               <img
                 class="cont-temp-icon"
-                src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
                 alt=""
               />
               25&nbsp;&deg;C
@@ -381,7 +381,7 @@
             <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
             <div class="cont-humidity">
               <img
-                src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
                 alt=""
                 class="cont-humidity-icon"
               />
@@ -395,7 +395,7 @@
             <div class="cont-temp">
               <img
                 class="cont-temp-icon"
-                src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
                 alt=""
               />
               25&nbsp;&deg;C
@@ -405,7 +405,7 @@
             <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
             <div class="cont-humidity">
               <img
-                src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
                 alt=""
                 class="cont-humidity-icon"
               />
@@ -419,7 +419,7 @@
             <div class="cont-temp">
               <img
                 class="cont-temp-icon"
-                src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
                 alt=""
               />
               25&nbsp;&deg;C
@@ -429,7 +429,7 @@
             <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
             <div class="cont-humidity">
               <img
-                src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
                 alt=""
                 class="cont-humidity-icon"
               />
@@ -443,7 +443,7 @@
             <div class="cont-temp">
               <img
                 class="cont-temp-icon"
-                src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
                 alt=""
               />
               25&nbsp;&deg;C
@@ -453,7 +453,7 @@
             <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
             <div class="cont-humidity">
               <img
-                src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
                 alt=""
                 class="cont-humidity-icon"
               />
@@ -467,7 +467,7 @@
             <div class="cont-temp">
               <img
                 class="cont-temp-icon"
-                src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
                 alt=""
               />
               25&nbsp;&deg;C
@@ -477,7 +477,7 @@
             <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
             <div class="cont-humidity">
               <img
-                src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
                 alt=""
                 class="cont-humidity-icon"
               />
@@ -491,7 +491,7 @@
             <div class="cont-temp">
               <img
                 class="cont-temp-icon"
-                src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
                 alt=""
               />
               25&nbsp;&deg;C
@@ -501,7 +501,7 @@
             <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
             <div class="cont-humidity">
               <img
-                src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
                 alt=""
                 class="cont-humidity-icon"
               />
@@ -515,7 +515,7 @@
             <div class="cont-temp">
               <img
                 class="cont-temp-icon"
-                src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
                 alt=""
               />
               25&nbsp;&deg;C
@@ -525,7 +525,7 @@
             <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
             <div class="cont-humidity">
               <img
-                src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
                 alt=""
                 class="cont-humidity-icon"
               />
@@ -539,7 +539,7 @@
             <div class="cont-temp">
               <img
                 class="cont-temp-icon"
-                src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
                 alt=""
               />
               25&nbsp;&deg;C
@@ -549,7 +549,7 @@
             <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
             <div class="cont-humidity">
               <img
-                src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
                 alt=""
                 class="cont-humidity-icon"
               />
@@ -563,7 +563,7 @@
             <div class="cont-temp">
               <img
                 class="cont-temp-icon"
-                src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
                 alt=""
               />
               25&nbsp;&deg;C
@@ -573,7 +573,7 @@
             <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
             <div class="cont-humidity">
               <img
-                src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
                 alt=""
                 class="cont-humidity-icon"
               />
@@ -587,7 +587,7 @@
             <div class="cont-temp">
               <img
                 class="cont-temp-icon"
-                src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
                 alt=""
               />
               25&nbsp;&deg;C
@@ -597,7 +597,7 @@
             <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
             <div class="cont-humidity">
               <img
-                src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
                 alt=""
                 class="cont-humidity-icon"
               />
@@ -611,7 +611,7 @@
             <div class="cont-temp">
               <img
                 class="cont-temp-icon"
-                src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
                 alt=""
               />
               25&nbsp;&deg;C
@@ -621,7 +621,7 @@
             <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
             <div class="cont-humidity">
               <img
-                src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
                 alt=""
                 class="cont-humidity-icon"
               />
@@ -635,7 +635,7 @@
             <div class="cont-temp">
               <img
                 class="cont-temp-icon"
-                src="../assets/htmlcss/Weather Icons/sunnyIcon.svg"
+                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
                 alt=""
               />
               25&nbsp;&deg;C
@@ -645,7 +645,7 @@
             <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
             <div class="cont-humidity">
               <img
-                src="../assets/htmlcss/Weather Icons/humidityIcon.svg"
+                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
                 alt=""
                 class="cont-humidity-icon"
               />
